# tic-tac-toe_opencv

./: CMakeLists.txt  LICENSE  README.md  main.cpp
